fix header on mobile

--- a/materialize-html-css/css/custom-styles.css
+++ b/materialize-html-css/css/custom-styles.css
@@ -185,9 +185,9 @@ h2 {
       transform: none;
   }
 
-  #jokerBG {
+  /* #jokerBG {
       height: 700px;
-  }
+  } */
 
   .center-img {
       text-align: center;
